# DaedalusEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Daedalus.sln  GenerateCleanProjects.bat  GenerateProjects.bat  Install.cmake  README.md  premake5.lua  vcpkg.json  version.txt
.github/workflows/: Linux-CI.yaml  Linux-CI.yml  Linux-Dev-CI.yml  Linux-Master-CI.yml  Windows-CI.yml  Windows-Dev-CI.yml  (+6 more)
CMakeScripts/: Install.cmake  Pack.cmake
Daedalus/: Daedalus.vcxproj  Daedalus.vcxproj.filters
LinuxScripts/: CMakeConfig.sh  CMakeConfigCB.sh  CMakeInstall.sh  CPackInstaller.sh  InstallDependencies.sh  InstallVCPKG.sh  UpdatePackages.sh
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters
WinScripts/: CMakeBuildRelease.bat  CMakeCleanConfig.bat  CMakeConfig.bat  CMakeConfigAndPackages.bat  CMakeInstall.bat  CPackInstaller.bat  GenerateProjects.bat  GetVersionNumber.ps1  InstallVCPKG.ps1  README.md  UpdatePackages.bat
dlEngine/: CMakeLists.txt
dlEngine/source/: Daedalus.h  dlpch.cpp  dlpch.h
dlEngine/source/Daedalus/: Application.cpp  Application.h  Core.h  EntryPoint.h  IWindow.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h
dlEngine/source/Daedalus/Core/: Application.cpp  Application.h  Core.h  IWindow.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp
dlEngine/source/Daedalus/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  EventTable.h  KeyEvent.h  MouseEvent.h  MouseEvents.h
dlEngine/source/Daedalus/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
dlEngine/source/Platform/: GLFWWindow.cpp  GLFWWindow.h  Platform.cpp  README.md
dlEngine/source/Platform/GLFW/: GLFWInput.cpp  GLFWInput.h  GLFWWindow.h
dlEngine/source/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
dlEngine/source/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
dlSandbox/: CMakeLists.txt
dlSandbox/source/: SandboxApp.cpp
dlUnitTests/: CMakeLists.txt
shaders/: BlinnPhong.frag  Phong.frag  Phong.vert  Standard.frag  TestShader.frag  TestShader.vert  Unlit.vert
source/: CMakeLists.txt  CmakeLists.txt
source/dlEngine/: CMakeLists.txt  ProjectFiles.cmake
source/dlEngine/source/: Daedalus.h  DummyTest.h  dlpch.h
source/dlEngine/source/Daedalus/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  HighPerformanceRequest.h  Input.cpp  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Window.h
source/dlEngine/source/Daedalus/Debug/: Log.cpp  Log.h
source/dlEngine/source/Daedalus/ECS/: Components.h  Entity.cpp  Entity.h  NativeScript.h  NativeScriptComponent.h  Scene.cpp  Scene.h  ScriptableEntity.h  UUID.h
source/dlEngine/source/Daedalus/ECS/NativeScripts/: CameraController.cpp  CameraController.h
source/dlEngine/source/Daedalus/ECS/Systems/: RenderSystem.cpp  RenderSystem.h
source/dlEngine/source/Daedalus/Events/: ApplicationEvent.h  Event.cpp  Event.h  EventDispatcher.h  EventTable.h  EventsEngine.cpp  EventsEngine.h  GamepadEvent.h  KeyEvent.h  MouseEvent.h
source/dlEngine/source/Daedalus/ImGui/: ImGuiLayer.cpp
source/dlEngine/source/Daedalus/Renderer/: BufferLayout.h  Framebuffer.cpp  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.h  Shader.cpp  Shader.h  ShaderLibrary.h  UniformBuffer.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
source/dlEngine/source/Daedalus/Renderer/API/: RenderCommand.cpp  RenderCommand.h  RenderConstants.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h
source/dlEngine/source/Daedalus/Renderer/Objects/: Cubemap.cpp  Cubemap.h  DirectionalLightSource.cpp  DirectionalLightSource.h  LightSSBO.cpp  LightSSBO.h  LightSource.cpp  LightSource.h  LightUBO.cpp  LightUBO.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PointLightSource.cpp  PointLightSource.h  SpotLightSource.cpp  SpotLightSource.h
source/dlEngine/source/Daedalus/Renderer/Primitives/: BufferLayout.h  FrameBuffer.cpp  FrameBuffer.h  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h
source/dlEngine/source/Daedalus/Renderer/Resourses/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.h
source/dlEngine/source/Daedalus/Threads/: DaedalusThreads.h  ThreadJoiner.cpp  ThreadJoiner.h  ThreadPool.cpp  ThreadPool.h  ThreadRunner.cpp  ThreadRunner.h
source/dlEngine/source/Daedalus/UI/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
source/dlEngine/source/Daedalus/Utils/: DeltaTime.h  FPSLocker.h  KeyCodes.h  Random.cpp  Random.h  Timer.h  WorkingDirectory.cpp  WorkingDirectory.h
source/dlEngine/source/Platform/: Platform.cpp  Platform.h
source/dlEngine/source/Platform/GLFW/: GLFWInput.cpp  GLFWInput.h  GLFWWindow.cpp  GLFWWindow.h
source/dlEngine/source/Platform/Linux/: LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
source/dlEngine/source/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderLibrary.cpp  OpenGLShaderLibrary.h  OpenGLShaderStorageBuffer.cpp  OpenGLShaderStorageBuffer.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
source/dlEngine/source/Platform/Windows/: WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
source/dlSandbox/: CMakeLists.txt  README.md  daedalus_icon.rc
source/dlSandbox/source/: ExampleLayer.cpp  ExampleLayer.h  ExampleScripts.h  SandboxApp.cpp  SandboxApp.h
vcpkg_triplets/: x64-linux.cmake  x64-windows.cmake
(+34 files in other folders)
